--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amqc",
+  "name": "hamqp",
   "version": "0.1.0",
   "description": "A high level AMQP library with auto-reconnect, auto-restore declaring, enhanced router and so on.",
   "private": true,
@@ -61,10 +61,10 @@
     "jest": "^27.4.7",
     "jest-junit": "^13.0.0",
     "lerna": "^4.0.0",
-    "lint-staged": "^12.2.1",
+    "lint-staged": "^12.2.2",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   },
   "husky": {
     "hooks": {
