--- a/packages/bus/tsconfig.json
+++ b/packages/bus/tsconfig.json
@@ -11,6 +11,9 @@
   ],
   "references": [
     {
+      "path": "../client/tsconfig.json"
+    },
+    {
       "path": "../testlab/tsconfig.json"
     }
   ]
