--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hamqp/client",
+  "name": "@hamq/client",
   "description": "A High level type-safe AMQP client with auto-reconnect and auto-declare",
   "version": "0.1.1",
   "keywords": [
@@ -34,31 +34,30 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/taoyuan/hamqp.git",
+    "url": "https://github.com/taoyuan/hamq.git",
     "directory": "packages/client"
   },
   "scripts": {
     "build": "nb-tsc",
-    "clean": "nb-clean hamqp-client*.tgz dist *.tsbuildinfo package",
+    "clean": "nb-clean hamq-client*.tgz dist *.tsbuildinfo package",
     "pretest": "npm run clean && npm run build",
     "test": "npm run jest",
     "jest": "jest --runInBand",
-    "verify": "npm pack && tar xf hamqp-client*.tgz && tree package && npm run clean",
+    "verify": "npm pack && tar xf hamq-client*.tgz && tree package && npm run clean",
     "tutorials:rabbit": "node ./tutorials/start-rabbit.js"
   },
   "dependencies": {
     "@connback/amqp": "^0.1.8",
-    "@jil/common": "^0.2.9",
-    "@jil/inflight": "^0.1.2",
+    "@jil/common": "^0.2.10",
+    "@jil/inflight": "^0.1.3",
     "amqplib": "^0.8.0",
     "chainable-error": "^1.0.2",
     "debug": "^4.3.3",
     "tily": "^2.10.1",
-    "ts-essentials": "^9.1.2",
-    "tslib": "^2.3.1",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
+    "@hamq/testlab": "^0.1.0",
     "@nutol/build": "^0.2.1",
     "@nutol/eslint-config": "^0.2.0",
     "@types/amqplib": "^0.8.2",
